syntax = "proto3";
package proto;
option go_package = "github.com/thomasjungblut/go-sstables/sstables/proto";

message IndexEntry {
    bytes key = 1;
    uint64 valueOffset = 2;
}

message DataEntry {
    bytes value = 1;
}

message MetaData {
    uint64 numRecords = 1;
    bytes minKey = 2;
    bytes maxKey = 3;
    uint64 dataBytes = 4;
    uint64 indexBytes = 5;
    uint64 totalBytes = 6;
}